--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,9 +7,8 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    name: Jay Martens
+    tagline: Web Developer    
 
     # Sidebar links
     email: hello@webjeda.com
