--- a/_data/data.yml
+++ b/_data/data.yml
@@ -33,7 +33,7 @@ education:
 
     - degree: Conestoga College
       university: Computer Programmer
-      time: 2014-2016
+      time: 2014 - 2016
       details: |
         
 experiences:
