--- a/_data/data.yml
+++ b/_data/data.yml
@@ -20,7 +20,7 @@ career-profile:
     title: About Me
     summary: |
         Full-stack web developer with a past in competitive gaming. Always pushing myself to refine my skills
-        and to constantly improve. With its always evolving technologies, web development
+        and to constantly improve. With its ever-evolving technologies, web development
         is the perfect job to scratch my itch of constant self improvement. Love working with teams, and am
         always happy to tackle challenging problems.
 
@@ -41,14 +41,13 @@ experiences:
       time: January 2019 - July 2020
       company: Freelance, Guelph
       details: |
-          - Made WordPress websites from the client's design or made necessarry changes to pre-existing sites
+          - Created WordPress websites from the client's design or made necessarry changes to pre-existing sites
           - Worked directly with customers to ensure their websites matched their vision
     - role: Arborist
       time: October 2017 - December 2018
       company: Royal City Tree Care,  Guelph
       details: |
-          - Adhered to all safety rules
-          - Worked as a team to ensure customers were cared for
+          - Despite being the highest-risk job in Canada, I worked individually and as a member of a team to follow all safety protocols and maintain an injury-free workplace
     - role: Systems Developer
       time: August 2016 - September 2017
       company: Vretta, Toronto
