--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,17 +37,19 @@ education:
       details: |
         
 experiences:
+    - role: Backend Engineer
+      time: November 2020 - Present
+      company: GOJI
+      details: |
+          - Created custom APIs and intergrated external APIs
+          - Planned, developed, tested and deployed features
+          - Modified deployment scripts and worked with AWS and Digital Ocean
     - role: Web Development
       time: January 2019 - July 2020
       company: Freelance, Guelph
       details: |
           - Created WordPress websites from the client's design or made necessarry changes to pre-existing sites
           - Worked directly with customers to ensure their websites matched their vision
-    - role: Arborist
-      time: October 2017 - December 2018
-      company: Royal City Tree Care,  Guelph
-      details: |
-          - Despite being the highest-risk job in Canada, I worked individually and as a member of a team to follow all safety protocols and maintain an injury-free workplace
     - role: Systems Developer
       time: August 2016 - September 2017
       company: Vretta, Toronto
