--- a/_data/data.yml
+++ b/_data/data.yml
@@ -41,8 +41,8 @@ experiences:
       time: November 2020 - Present
       company: GOJI
       details: |
-          - Created custom APIs and intergrated external APIs
-          - Planned, developed, tested and deployed features
+          - Created custom APIs and integrated external APIs
+          - Planned, developed, tested, and deployed features
           - Modified deployment scripts and worked with AWS and Digital Ocean
     - role: Web Development
       time: January 2019 - July 2020
