--- a/_data/data.yml
+++ b/_data/data.yml
@@ -48,7 +48,7 @@ experiences:
       time: January 2019 - July 2020
       company: Freelance, Guelph
       details: |
-          - Created WordPress websites from the client's design or made necessarry changes to pre-existing sites
+          - Created WordPress websites from the client's design or made necessary changes to pre-existing sites
           - Worked directly with customers to ensure their websites matched their vision
     - role: Systems Developer
       time: August 2016 - September 2017
