Last typo I swear

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -21,7 +21,7 @@ career-profile:
     summary: |
         Full-stack web developer with a past in competitive gaming. Always pushing myself to refine my skills
         and to constantly improve. With its ever-evolving technologies, web development
-        is the perfect job to scratch my itch of constant self-improvement. Love working with teams, and am
+        is the perfect job to scratch my itch for constant self-improvement. Love working with teams, and am
         always happy to tackle challenging problems.
 
 
